--- a/inde.html
+++ b/inde.html
@@ -54,7 +54,7 @@
 
     <!-- service section -->
      <section class="services" id="services">
-        <h2>Nossos <span> Servços</span></h2>
+        <h2>Nossos <span> Serviços</span></h2>
 
         <div class="services-container">
             <div class="services-box">
