--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="services-container">
                 <div class="services-box">
                     <i class='bx bx-code-curly' ></i>
-                    <h3>Web Development</h3>
+                    <h3>Back-End Development</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Est mollitia asperiores cumque, voluptatum ipsum vero ad aperiam eius nostrum reprehenderit sunt molestias quae quam quasi voluptates. Nobis reprehenderit ipsum velit.
                     </p>
@@ -77,7 +77,7 @@
                 <div class="services-container">
                     <div class="services-box">
                         <i class='bx bx-mobile-alt'></i>
-                        <h3>Web Development</h3>
+                        <h3>Mobile Development</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est mollitia asperiores cumque, voluptatum ipsum vero ad aperiam eius nostrum reprehenderit sunt molestias quae quam quasi voluptates. Nobis reprehenderit ipsum velit.
                         </p>
