--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2>Contact <span>Me!</span></h2>
 
         <form action="#">
-            <div class="inpu-box">
+            <div class="input-box">
                 <input type="text" placeholder="Full Name">
                 <input type="email" placeholder="E-mail">
             </div>
