--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="home-content">
             <h3>Olá, Eu sou</h3>
             <h1>Valdir Nascimento Ferreira</h1>
-            <h3>Professor de Letras  e <span>Desenvolvedor de Sistemas</span></h3>
+            <h3>Professor de Letras <span> Português/Inglês/Respectivas Literaturas</span>  e <span>Desenvolvedor de Sistemas</span></h3>
 
             <p>
                 reiciendis eveniet odio, quisquam aut vel eos facere maxime iste alias? Libero officiis iste doloribus vero totam?
