--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ Sou um professor de Letras especializado em Português, Inglês e respectivas li
             </p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/ValdirDEV143"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/valdir-nascimento-ferreira-04a66016b/"><i class='bx bxl-linkedin'></i></a>
             </div>
 
             <div>
@@ -68,9 +68,8 @@ Sou um professor de Letras especializado em Português, Inglês e respectivas li
     <!-- /home section -->
 
     <!-- service section -->
-     <section class="services" id="services">
+    <section class="Services" id="Services">
         <h2>Nossos <span> Serviços</span></h2>
-
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
@@ -78,31 +77,34 @@ Sou um professor de Letras especializado em Português, Inglês e respectivas li
                 <p>
                     Soluções inteligentes e criativas para suas dores! 
                 </p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Read More</a>  
             </div>
-
-            <div class="services-container">
-                <div class="services-box">
-                    <i class='bx bx-code-curly' ></i>
-                    <h3>Back-End Development</h3>
-                    <p>
-                        Soluções inteligentes e criativas para suas dores! 
-                    </p>
-                    <a href="#" class="btn">Read More</a>
-                </div>
-                
-                <div class="services-container">
-                    <div class="services-box">
-                        <i class='bx bx-mobile-alt'></i>
-                        <h3>Mobile Development</h3>
-                        <p>
-                            Soluções inteligentes e criativas para suas dores! 
-                        </p>
-                        <a href="#" class="btn">Read More</a>
-                    </div>
         </div>
-     </section>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-curly'></i>
+                <h3>Back-End Development</h3>
+                <p>
+                    Soluções inteligentes e criativas para suas dores! 
+                </p>
+                <a href="#" class="btn">Read More</a>  
+            </div>
+        </div>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-mobile-alt'></i>
+                <h3>Mobile Development</h3>
+                <p>
+                    Soluções inteligentes e criativas para suas dores! 
+                </p>
+                <a href="#" class="btn">Read More</a>  
+            </div>
+        </div>
+    </section>
     <!-- /service section -->
+   
 
     <!-- portfolio section-->
      <section class="portfolio" id="portfolio">
