--- a/index.html
+++ b/index.html
@@ -128,24 +128,30 @@ Sou um professor de Letras especializado em Português, Inglês e respectivas li
             <div class="portfolio-box">
                 <img src="img/johnrooster.png" alt="Portfolio2">
 
-                <div class="portfolio-layer"></div>
-                <h4>Back-End Development</h4>
+                <div class="portfolio-layer">
+                    <h4>Back-End Development</h4>
 
                 <p>
-                    Projeto nº2
+                    Projeto nº2 Do Back-End ao Front-End! Site comercial para cliente!
                 </p>
+
+                </div>
+                
                 <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
 
             <div class="portfolio-box">
                 <img src="img/gamer.jpn.jpg" alt="Portfolio3">
 
-                <div class="portfolio-layer"></div>
-                <h4>Mobile Development</h4>
+                <div class="portfolio-layer">
+                    <h4>Mobile Development</h4>
 
                 <p>
-                    Projeto nº3
+                    Projeto nº3 Site Gamer Disponivel também no Mobile!
                 </p>
+
+                </div>
+                
                 <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
 
