--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="home-content">
             <h3>Olá, Eu sou</h3>
             <h1>Valdir Nascimento Ferreira</h1>
-            <h3>Professor de Letras <span> Português&Inglês&Respectivas Literaturas</span>  e <span>Desenvolvedor de Sistemas</span></h3>
+            <h3> <span> Teacher</span> and <span>Developer</span></h3>
 
             <p>
 Sou um professor de Letras especializado em Português, Inglês e respectivas literaturas, além de desenvolvedor de sistemas. Minha abordagem de ensino utiliza metodologias ativas e recursos tecnológicos, promovendo o aprendizado dinâmico e envolvente. Como desenvolvedor, crio soluções tecnológicas para facilitar a educação e integrar conhecimento literário com tecnologia. Meu objetivo é formar cidadãos críticos e bem-informados, unindo educação e inovação tecnológica.
@@ -187,7 +187,7 @@ Sou um professor de Letras especializado em Português, Inglês e respectivas li
         <div class="about-content">
             <h3>About me</h3>
             <h1>Valdir Nascimento Ferreira</h1>
-            <h1>Professor de Letras <span> Português&Inglês&Respectivas Literaturas</span>  e <span>Desenvolvedor de Sistemas</span></h1>
+            <h1> <span> Teacher</span> and <span>Developer</span></h1>
             <p>
 Sou um professor de Letras especializado em Português, Inglês e respectivas literaturas, além de desenvolvedor de sistemas. Minha abordagem de ensino utiliza metodologias ativas e recursos tecnológicos, promovendo o aprendizado dinâmico e envolvente. Como desenvolvedor, crio soluções tecnológicas para facilitar a educação e integrar conhecimento literário com tecnologia. Meu objetivo é formar cidadãos críticos e bem-informados, unindo educação e inovação tecnológica.
             </p>
