--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Portfólio</a>
+        <a href="#" class="logo"><span>Valdir Nascimento Ferreira</span></a>
 
         <div class="nav">
             <a href="#home">Home</a>
